# opentalk-controller

./: .gitignore  .gitlab-ci.yml  .markdown_style.rb  .redocly.yaml  .yamllint.yaml  CHANGELOG.MD  CHANGELOG.md  Cargo.toml  DB_MIGRATIONS.md  METRICS.md  README.md  deny.toml  diesel.toml  generate_schema.sh
.cargo/: config
client/: .gitignore  Cargo.toml
client/src/: lib.rs
client/src/api/: mod.rs
client/src/api/v1/: auth.rs  rooms.rs  users.rs
client/src/k3k/: mod.rs
client/src/k3k/api/: introspect.rs
client/src/keycloak/: mod.rs
crates/automod/: Cargo.toml
crates/automod/src/: config.rs  incoming.rs  lib.rs  outgoing.rs  rabbitmq.rs
crates/automod/src/state_machine/: mod.rs  next.rs  random.rs
crates/automod/src/storage/: allow_list.rs  config.rs  history.rs  lock.rs  playlist.rs  speaker.rs
crates/automod/tests/: integration.rs
crates/chat/: Cargo.toml
crates/chat/src/: incoming.rs  lib.rs  outgoing.rs  storage.rs
crates/chat/tests/: integration.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/client/src/api/: introspect.rs
crates/client/src/keycloak/: mod.rs
crates/community-modules/: Cargo.toml
crates/community-modules/src/: lib.rs
crates/controller/: Cargo.toml  build.rs
crates/controller-shared-types/: Cargo.toml  README.md
crates/controller-shared-types/src/: lib.rs  settings.rs
crates/controller-shared-types/src/macros/: mod.rs  redis.rs
crates/controller/src/: acl.rs  lib.rs  metrics.rs  redis_wrapper.rs  settings.rs  trace.rs
crates/controller/src/api/: internal.rs  mod.rs  util.rs
crates/controller/src/cli/: acl.rs  fix_acl.rs  mod.rs  reload.rs  tariffs.rs  tenants.rs
crates/controller/src/db/: groups.rs  invites.rs  legal_votes.rs  mod.rs  rooms.rs  schema.rs  sip_configs.rs  users.rs
crates/controller/src/ha_sync/: mod.rs  user_update.rs
crates/controller/src/internal_api/: introspect.rs  mod.rs
crates/controller/src/oidc/: claims.rs  http.rs  jwt.rs  mod.rs  provider.rs
crates/controller/src/services/: mail.rs  mod.rs
crates/controller/src/storage/: assets.rs  mod.rs
crates/controller/tests/: api_sequence.rs  introspect.rs  test-config.toml
crates/controller/tests/common/: mod.rs
crates/database/: Cargo.toml  README.md
crates/database/src/: db.rs  lib.rs  metrics.rs  query_helper.rs
crates/db-storage/: Cargo.toml  README.md
crates/db-storage/src/: assets.rs  events.rs  groups.rs  invites.rs  legal_votes.rs  lib.rs  macros.rs  rooms.rs  schema.rs  sip_configs.rs  tariffs.rs  tenants.rs  users.rs  utils.rs
crates/db-storage/src/events/: email_invites.rs  mod.rs
crates/db-storage/src/legal_votes/: mod.rs
crates/db-storage/src/migrations/: V10__dashboard.sql  V11__invite_cascade_delete.sql  V12__require_oidc_issuer.sql  V13__email_invites.sql  V14__rooms_remove_unused_properties.sql  V15__user_phone.sql  V16__waiting_room.sql  V17__adhoc_room.sql  V18__flag_existing_adhoc_events.sql  V19__storage.sql  V1__initial.rs  V20__remove_oidc_issuer.sql  V21__remove_administrator_role.sql  V22__tenants.sql  V23__tariffs.sql  V2__invite_links_v1.rs  V3__sip_invites.rs  V4__kustos_v1.rs  V5__legal_vote_room.rs  V5__legalvote_room.rs  V6__find_user.sql  V7__uuid_for_ids.sql  V8__fix_column_ordering.sql  V9__user_attributes.sql  mod.rs
crates/db-storage/tests/: common.rs  find_user.rs  get_events.rs
crates/ee-chat/: Cargo.toml
crates/ee-chat/src/: incoming.rs  lib.rs  outgoing.rs  storage.rs
crates/ee-chat/tests/: integration.rs
crates/etherpad-client/: Cargo.toml
crates/etherpad-client/src/: lib.rs
crates/janus-client/: Cargo.toml
crates/janus-client/src/: client.rs  error.rs  lib.rs  macros.rs  rabbitmq.rs
crates/janus-client/src/transport/: mod.rs  rabbitmq.rs  websocket.rs
crates/janus-client/src/types/: mod.rs
crates/janus-client/tests/: integration_test.rs
crates/janus-media/: Cargo.toml
crates/janus-media/src/: focus.rs  incoming.rs  lib.rs  outgoing.rs  rabbitmq.rs  sessions.rs  settings.rs  storage.rs
crates/janus-media/src/mcu/: mod.rs  types.rs
crates/keycloak-admin/: Cargo.toml
crates/keycloak-admin/src/: lib.rs  users.rs
crates/kustos/: Cargo.toml  README.md
crates/kustos/src/: access.rs  error.rs  lib.rs  metrics.rs  policies_builder.rs  policy.rs  prelude.rs  resource.rs  subject.rs
crates/kustos/src/actix_web/: middleware.rs  mod.rs
crates/kustos/src/db/: casbin.rs  mod.rs  schema.rs
crates/kustos/src/internal/: diesel_adapter.rs  impls.rs  mod.rs  rbac_api_ex.rs  synced_enforcer.rs
crates/lapin-pool/: Cargo.toml
crates/lapin-pool/src/: lib.rs
crates/legal-vote/: Cargo.toml
crates/legal-vote/src/: error.rs  frontend_data.rs  incoming.rs  lib.rs  outgoing.rs  pdf.rs  rabbitmq.rs
crates/legal-vote/tests/: integration.rs
crates/mail-worker-proto/: Cargo.toml
crates/mail-worker-proto/src/: lib.rs  v1.rs
crates/mail-worker-protocol/: Cargo.toml
crates/mail-worker-protocol/src/: lib.rs
crates/main/: Cargo.toml
crates/main/src/: main.rs
crates/polls/: Cargo.toml
crates/polls/src/: incoming.rs  lib.rs  outgoing.rs  rabbitmq.rs  storage.rs
crates/polls/tests/: integration.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: incoming.rs  lib.rs  outgoing.rs  rabbitmq.rs
crates/r3dlock/: Cargo.toml
crates/r3dlock/src/: error.rs  lib.rs
crates/redis-args/: Cargo.toml
crates/redis-args/src/: from_redis_value.rs  lib.rs  to_redis_args.rs
crates/redis-args/tests/: redis_args.rs
crates/room-provisioner/: Cargo.toml  README.md
crates/room-provisioner/ci/: Dockerfile
crates/room-provisioner/example/: provisioning.yaml
crates/room-provisioner/src/: main.rs
crates/spacedeck/: Cargo.toml
crates/spacedeck/src/: client.rs  lib.rs  outgoing.rs  rabbitmq.rs  state.rs
crates/test-util/: Cargo.toml
crates/test-util/src/: common.rs  database.rs  lib.rs  redis.rs
janus-client/: Cargo.toml
janus-client/src/: async_types.rs  client.rs  error.rs  lib.rs  rabbitmq.rs
janus-client/src/types/: mod.rs
janus-client/tests/: integration_test.rs
xtask/: Cargo.toml
xtask/src/: db_schema.rs  main.rs
(+280 files in other folders)
