[package]
name = "k3k-controller"
version = "1.0.0-rc.5"
edition = "2018"
authors = ["OpenTalk Team <we@opentalk.eu>"]
publish = false

[workspace]
members = ["crates/*", "xtask"]

[dependencies]
anyhow = "1.0"
actix-web = { version = "4", default-features = false }
controller = { path = "crates/controller", package = "k3k-controller-core" }
janus-media = { path = "crates/janus-media", package = "k3k-janus-media" }
automod = { path = "crates/automod", package = "k3k-automod" }
ee-chat = { path = "crates/ee-chat", package = "k3k-ee-chat" }
chat = { path = "crates/chat", package = "k3k-chat" }
legal-vote = { path = "crates/legal-vote", package = "k3k-legal-vote" }
polls = { path = "crates/polls", package = "k3k-polls" }
kustos = { path = "crates/kustos" }
protocol = { path = "crates/protocol", package = "k3k-protocol" }
timer = { path = "crates/timer", package = "k3k-timer" }
spacedeck = { path = "crates/spacedeck", package = "k3k-spacedeck" }
