[package]
name = "xtask"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../crates//database", package = "k3k-database" }
db-storage = { path = "../crates/db-storage", package = "k3k-db-storage" }

tokio = { version = "1", features = ["macros"] }

structopt = { version = "0.3" }
anyhow = { version = "1.0" }
url = { version = "2.2.2" }
cargo_metadata = { version = "0.14.1" }
devx-cmd = { version = "0.5.0" }
unified-diff = { version = "0.2.1" }

log = { version = "0.4.14" }
env_logger = { version = "0.9.0" }

diesel = { version = "2.0.0", features = ["postgres"] }

rand = { version = "0.8.4" }
