# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../crates//database", package = "k3k-database" }
db-storage = { path = "../crates/db-storage", package = "k3k-db-storage" }

tokio = { version = "1", features = ["macros"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = { version = "1.0" }
url = { version = "2.3.1" }
cargo_metadata = { version = "0.15" }
devx-cmd = { version = "0.5.0" }
unified-diff = { version = "0.2.1" }

log = { version = "0.4.17" }
env_logger = { version = "0.10" }

diesel = { version = "2.0.3", features = ["postgres"] }

rand = { version = "0.8.5" }
