[package]
name = "k3k-automod"
version = "0.1.0"
edition = "2018"

[dependencies]
controller = { path = "../controller", package = "k3k-controller-core" }
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
test-util = { path = "../test-util", package = "k3k-test-util" }
serial_test = "0.5"
actix-rt = "2.2"
