[package]
name = "k3k-automod"
version = "1.0.0-rc.5"
edition = "2018"
publish = false
authors = ["OpenTalk Team <we@opentalk.eu>"]

[dependencies]
controller = { path = "../controller", package = "k3k-controller-core" }
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }
db-storage = { path = "../db-storage", package = "k3k-db-storage" }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
test-util = { path = "../test-util", package = "k3k-test-util" }
serial_test = "0.7"
actix-rt = "2.2"
