[package]
name = "k3k-chat"
version = "1.0.0-rc.10"
edition = "2021"
authors.workspace = true
publish = false

[dependencies]
controller = { path = "../controller", package = "k3k-controller-core" }
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }
db-storage = { path = "../db-storage", package = "k3k-db-storage" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.3"
