# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "k3k-chat"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
publish = false

[dependencies]
controller = { path = "../controller", package = "k3k-controller-core" }
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }
db-storage = { path = "../db-storage", package = "k3k-db-storage" }
database = { path = "../database", package = "k3k-database" }
serde = { version = "1", features = ["derive"] }
redis = "0.22"
redis-args = { path = "../redis-args", package = "k3k-redis-args" }
types = { path = "../types", package = "k3k-types", features = ["backend"] }

[dev-dependencies]
pretty_assertions = "1.3"
serial_test = "1"
test-util = { path = "../test-util", package = "k3k-test-util", features = ["controller"]}
actix-rt = "2.8"
