[package]
name = "k3k-controller-shared"
description = "Shared types and trait definitions for k3k-controller"
version = "1.0.0-rc.5"
edition = "2018"
publish = false
authors = ["OpenTalk Team <we@opentalk.eu>"]

[dependencies]
# Settings related
config = { version = "0.13.1", default-features = false, features = ["toml"] }
arc-swap = "1.3"
serde = { version = "1", features = ["derive"] }
openidconnect = { version = "2" }
chrono = "0.4"
url = "2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
redis = { version = "0.21", features = ["tokio-comp", "connection-manager"] }
cidr = { version = "0.2", features = ["serde"] }
phonenumber = "0.3"
