# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "k3k-controller-shared"
description = "Shared types and trait definitions for k3k-controller"
version = "1.0.0-rc.10"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
publish = false

[dependencies]
# Settings related
config = { version = "0.13.1", default-features = false, features = ["toml"] }
arc-swap = "1.3"
serde = { version = "1", features = ["derive"] }
openidconnect = { version = "2" }
chrono = "0.4"
url = "2"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
redis = { version = "0.21", features = ["tokio-comp", "connection-manager"] }
cidr = { version = "0.2", features = ["serde"] }
phonenumber = "0.3"
redis-args = { path = "../redis-args", package = "k3k-redis-args" }

[dev-dependencies]
pretty_assertions = "1.3"
