# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "k3k-controller-shared"
description = "Shared types and trait definitions for k3k-controller"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
publish = false

[dependencies]
# Settings related
config = { version = "0.13.3", default-features = false, features = ["toml"] }
arc-swap = "1.6"
serde = { version = "1", features = ["derive"] }
openidconnect = { version = "2" }
chrono = "0.4"
url = "2"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
redis = { version = "0.22", features = ["tokio-comp", "connection-manager"] }
cidr = { version = "0.2", features = ["serde"] }
phonenumber = "0.3"
redis-args = { path = "../redis-args", package = "k3k-redis-args" }

[dev-dependencies]
pretty_assertions = "1.3"
