[package]
name = "k3k-controller-core"
version = "0.1.0"
edition = "2018"

build = "build.rs"

[dependencies]
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }
database = { path = "../database", package = "k3k-database" }
db-storage = { path = "../db-storage", package = "k3k-db-storage" }
mail-worker-proto = { path = "../mail-worker-protocol", package = "k3k-mail-worker-protocol", features = [
    "client",
] }

### Logging utilities
log = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1" }
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "parking_lot",
    "env-filter",
] }
tracing-opentelemetry = "0.17"
opentelemetry = { version = "0.17", default-features = false, features = [
    "trace",
    "rt-tokio-current-thread",
    "metrics",
] }
opentelemetry-jaeger = { version = "0.16", features = [
    "rt-tokio-current-thread",
] }
opentelemetry-prometheus = "0.10"
prometheus = "0.13"
tracing-actix-web = { version = "0.5" }

### Config
config = { version = "0.13.1", default-features = false, features = ["toml"] }
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
arc-swap = "1.3"

### Error handling
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.14", features = ["derive"] }

### Database ORM
diesel = { version = "1.4.6", features = [
    "postgres",
    "uuid",
    "uuidv07",
    "r2d2",
    "serde_json",
    "chrono",
] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
uuid_v1 = { package = "uuid", version = "1.0.0", features = ["serde", "v4"] }

### Web Framework & Runtime
tokio = { version = "1", features = ["signal"] }
tokio-stream = { version = "0.1.5", features = ["sync"] }
actix-web = { version = "4", features = ["rustls"] }
actix-rt = "2.2"
actix-web-httpauth = "0.6"
actix-cors = "0.6"
futures-util = "0.3"
async-trait = "0.1"
futures = "0.3"
bytes = "1"
serde_json = "1"
bincode = "1.3"
parking_lot = "0.12"
mime = "0.3.16"
bytestring = "1"

### RabbitMQ
lapin = { version = "2", default-features = false }
lapin-pool = { path = "../lapin-pool" }

### Redis
redis = { version = "0.21", features = ["tokio-comp", "connection-manager"] }
url = "2"
r3dlock = { path = "../r3dlock" }

### OpenID Connect & JWT
openidconnect = { version = "2" }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
jsonwebtoken = "8.1.1"
base64 = "0.13"
chrono = "0.4"
chrono-tz = { version = "0.6", features = ["serde"] }

### Websockets
actix = "0.13"
actix-http = "3"
actix-web-actors = "4.1"

### Rust Encryption
ring = "0.16"
rustls = "0.20"
rustls-pemfile = "0.3"
md5 = "0.7"

### QoL/Util
displaydoc = "0.2"
either = "1.6.1"
itertools = "0.10"
phonenumber = "0.3"
email_address = "0.2.1"

# Random Distributions etc. Used for RR
rand = "0.8.3"

### Reload controller process
sysinfo = { version = "0.23", default-features = false }
nix = "0.23.0"

### Access Control
kustos = { path = "../kustos" }
keycloak-admin = { path = "../keycloak-admin" }
regex = "1.5"

rrule = "0.7"

[dev-dependencies]
test-util = { path = "../test-util", package = "k3k-test-util" }

[build-dependencies]
anyhow = "1.0"
vergen = { version = "7.0.0", default-features = false, features = [
    "build",
    "cargo",
    "rustc",
    "git",
] }
