# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "k3k-controller-core"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
publish = false
build = "build.rs"

[dependencies]
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }
database = { path = "../database", package = "k3k-database" }
db-storage = { path = "../db-storage", package = "k3k-db-storage" }
mail-worker-proto = { path = "../mail-worker-protocol", package = "k3k-mail-worker-protocol", features = [
    "client",
] }

### Logging utilities
log = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1" }
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "parking_lot",
    "env-filter",
] }
tracing-opentelemetry = "0.17"
opentelemetry = { version = "0.17", default-features = false, features = [
    "trace",
    "rt-tokio-current-thread",
    "metrics",
] }
opentelemetry-jaeger = { version = "0.16", features = [
    "rt-tokio-current-thread",
] }
opentelemetry-prometheus = "0.10"
prometheus = "0.13"
tracing-actix-web = { version = "0.6" }

### Config
config = { version = "0.13.1", default-features = false, features = ["toml"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
arc-swap = "1.3"

### Error handling
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.15", features = ["derive"] }

### Database ORM
diesel = { version = "2", features = [
    "postgres",
    "uuid",
    "r2d2",
    "serde_json",
    "chrono",
] }
uuid = { package = "uuid", version = "1.0.0", features = ["serde", "v4"] }

### S3 Storage
aws-config = "0.51"
aws-sdk-s3 = "0.21"

### Web Framework & Runtime
tokio = { version = "1", features = ["signal"] }
tokio-stream = { version = "0.1.5", features = ["sync"] }
actix-web = { version = "4", features = ["rustls"] }
actix-rt = "2.2"
actix-web-httpauth = "0.6"
actix-cors = "0.6"
futures-util = "0.3"
async-trait = "0.1"
futures = "0.3"
bytes = "1"
serde_json = "1"
bincode = "1.3"
parking_lot = "0.12"
mime = "0.3.16"
bytestring = "1"

### RabbitMQ
lapin = { version = "2", default-features = false }
lapin-pool = { path = "../lapin-pool" }

### Redis
redis = { version = "0.21", features = ["tokio-comp", "connection-manager"] }
url = "2"
r3dlock = { path = "../r3dlock" }

### OpenID Connect & JWT
openidconnect = { version = "2" }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
jsonwebtoken = "8.1.1"
base64 = "0.13"
chrono = "0.4"
chrono-tz = { version = "0.6", features = ["serde"] }

### Websockets
actix = "0.13"
actix-http = "3"
actix-web-actors = "4.1"

### Rust Encryption
ring = "0.16"
rustls = "0.20"
rustls-pemfile = "1.0"
md5 = "0.7"

### QoL/Util
either = "1.6.1"
itertools = "0.10"
phonenumber = "0.3"
email_address = "0.2.1"
redis-args = { path = "../redis-args", package = "k3k-redis-args" }

# Random Distributions etc. Used for RR
rand = "0.8.3"

### Reload controller process
sysinfo = { version = "0.24", default-features = false }
nix = "0.24.0"

### Access Control
kustos = { path = "../kustos" }
keycloak-admin = { path = "../keycloak-admin" }
regex = "1.5"

rrule = "0.7"

### CLI
tabled = "0.10"

[dev-dependencies]
test-util = { path = "../test-util", package = "k3k-test-util", features = ["database"] }
pretty_assertions = "1.3"

[build-dependencies]
anyhow = "1.0"
vergen = { version = "7.0.0", default-features = false, features = [
    "build",
    "cargo",
    "rustc",
    "git",
] }
