[package]
name = "k3k-database"
version = "0.1.0"
edition = "2018"


[dependencies]
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }

### ORM and Database connector
diesel = { version = "1.4.6", features = ["postgres", "uuid", "uuidv07", "r2d2", "serde_json", "chrono"] }

### Error handling
thiserror = "1.0"

### Logging utilities
log = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1" }
