[package]
name = "k3k-database"
version = "1.0.0-rc.1"
edition = "2018"
publish = false
authors = ["OpenTalk Team <we@opentalk.eu>"]

[dependencies]
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }

### ORM and Database connector
diesel = { version = "1.4.6", features = [
    "postgres",
    "uuid",
    "uuidv07",
    "r2d2",
    "serde_json",
    "chrono",
] }

### Error handling
thiserror = "1.0"

### Logging utilities
log = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1" }

### Opentelementry metrics
opentelemetry = { version = "0.17", default-features = false, features = [
    "metrics",
] }
