# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "k3k-database"
version = "0.1.0-rc.1"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
publish = false

[dependencies]
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }

### ORM and Database connector
diesel = { version = "^2.0.0", features = [
    "postgres",
    "uuid",
    "r2d2",
    "serde_json",
    "chrono",
    "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
] }

### Error handling
thiserror = "1.0"

### Logging utilities
log = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1" }

### Opentelementry metrics
opentelemetry = { version = "0.17", default-features = false, features = [
    "metrics",
] }
