[package]
name = "k3k-db-storage"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }
database = { path = "../database", package = "k3k-database" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

### Error handling
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.14", features = ["derive"] }

### Database ORM
diesel = { version = "1.4.6", features = ["postgres", "uuid", "uuidv07", "r2d2", "serde_json", "chrono"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

### Database migrations
refinery = { version = "0.6", features = ["tokio-postgres", "tokio"] }
refinery-core = "0.6"
barrel = { version = "0.6", features = ["pg"] }

### Logging utilities
log = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1" }

### For migration
tokio = { version = "1", features = ["signal"] }
chrono = { version ="0.4"}

### Redis
redis = { version = "0.21", features = ["tokio-comp", "connection-manager"] }
url = "2"

rand = "0.8.3"


[dev-dependencies]
serial_test = "0.5"
test-util = { path = "../test-util", package = "k3k-test-util" }

