[package]
name = "k3k-db-storage"
version = "1.0.0-rc.10"
edition = "2021"
authors.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }
database = { path = "../database", package = "k3k-database" }
kustos = { path = "../kustos" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }

### Error handling
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.15", features = ["derive"] }

### Database ORM
diesel = { version = "2", features = [
    "postgres",
    "uuid",
    "r2d2",
    "serde_json",
    "chrono",
] }
uuid = { version = "1.0.0", features = ["serde", "v4"] }

### Database migrations
refinery = { version = "0.8", features = ["tokio-postgres"] }
refinery-core = "0.8"
barrel = { version = "0.7", features = ["pg"] }

### Logging utilities
log = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1" }

### For migration
tokio = { version = "1", features = ["signal"] }
chrono = { version = "0.4" }
chrono-tz = { version = "0.6", features = ["serde"] }

### Redis
redis = { version = "0.21", features = ["tokio-comp", "connection-manager"] }
url = "2"

rand = "0.8.3"

[dev-dependencies]
serial_test = "0.7"
test-util = { path = "../test-util", package = "k3k-test-util" }
