[package]
name = "k3k-ee-chat"
version = "0.1.0"
edition = "2018"

[dependencies]
controller = { path = "../controller", package = "k3k-controller-core" }
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }
db-storage = { path = "../db-storage", package = "k3k-db-storage" }
chat = { path = "../chat", package = "k3k-chat" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
test-util = { path = "../test-util", package = "k3k-test-util" }
serial_test = "0.6"
actix-rt = "2.2"
