[package]
name = "etherpad-client"
version = "0.1.0"
edition = "2018"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "cookies",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1"
anyhow = "1.0"
tokio = { version = " 1", features = ["time"] }
chrono = "0.4"
percent-encoding = "2.1"
url = "2.2"
bytes = "1.1"
