# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "etherpad-client"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
publish = false

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "cookies",
    "rustls-tls",
    "stream",
] }
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1"
anyhow = "1.0"
tokio = { version = "1", features = ["time"] }
chrono = "0.4"
percent-encoding = "2.2"
url = "2.3"
bytes = "1.4"
futures = "0.3"
