# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "janus-client"
version = "0.2.0"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
publish = false

[dependencies]
# RabbitMQ
lapin = { version = "2", default-features = false }
# Websockets
tokio-tungstenite = { version = "0.18", features = ["__rustls-tls"] }

# Random Generators
rand = { version = "0.8.5", features = ["std", "std_rng"] }
# We use the std Futures and FutureExt from future-util which are both bundled in this crate
futures = "0.3.27"
# We currently only support tokio as the runtime
tokio = { version = "1.26", features = ["sync", "rt"] }
# Used as an alternative to the std sync primitves
parking_lot = "0.12"
# Used to serialize from and to JSON
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serde_repr = "0.1.11"

# Error handling
thiserror = "1.0.39"
# Reduce clutter arround docs/error strings
displaydoc = "0.2.3"
# Logging
tracing = "0.1"
log = "0.4.17"

[dev-dependencies]
pretty_assertions = "1.3"

# Test runtime
tokio-test = "0.4"
# Used to get log output in integration tests if needed
test-log = "0.2"
env_logger = "0.10"

# Enabling macros for tests
tokio = { version = "1", features = ["sync", "rt", "macros"] }


[features]
default = ["videoroom", "echotest"]
videoroom = []
echotest = []
