# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "k3k-janus-media"
version = "1.0.0-rc.10"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
publish = false

[dependencies]
controller = { path = "../controller", package = "k3k-controller-core" }
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }
serde = { version = "1", features = ["derive"] }
janus-client = { path = "../janus-client" }
pin-project-lite = "0.2"
redis = "0.21"
redis-args = { path = "../redis-args", package = "k3k-redis-args" }

[dev-dependencies]
test-util = { path = "../test-util", package = "k3k-test-util", features = ["database"] }
pretty_assertions = "1.3"
