[package]
name = "k3k-janus-media"
version = "1.0.0-rc.10"
edition = "2021"
authors.workspace = true
publish = false

[dependencies]
controller = { path = "../controller", package = "k3k-controller-core" }
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }
serde = { version = "1", features = ["derive"] }
janus-client = { path = "../janus-client" }
pin-project-lite = "0.2"

[dev-dependencies]
test-util = { path = "../test-util", package = "k3k-test-util" }
