# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "keycloak-admin"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
publish = false

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
tokio = "1"
url = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
