[package]
name = "kustos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database", package = "k3k-database" }
casbin = { version = "2.0.9", default-features = false, features = [
    "runtime-tokio",
    "incremental",
] }

## Database migration
barrel = { version = "0.6", features = ["pg"] }

### Error handling
thiserror = "1.0"
anyhow = "1.0.48"
http = "0.2.5"

### Database ORM
diesel = { version = "1.4.6", features = [
    "postgres",
    "uuid",
    "uuidv07",
    "r2d2",
    "serde_json",
    "chrono",
] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

### Logging utilities
log = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1" }
tracing-futures = "0.2"

### QoL
itertools = "0.9"
futures = "0.3"
async-trait = "0.1"

tokio = { version = "1" }
parking_lot = "0.11.2"

### TODO(r.floren) add this as a default feature
actix-web = { version = "= 4.0.0-beta.9", features = ["rustls"] }

[dev-dependencies]
serial_test = "0.5"
anyhow = "1.0"
# TODO(r.floren) remove this in the future. Currently used to migrate in tests. Find something lighter.
db-storage = { path = "../db-storage", package = "k3k-db-storage" }
url = "2"
tokio = { version = "1", features = ["rt", "macros"] }
